v2.0/support-center/frequently-asked-questions--faq-.md
---
type: page
title: Frequently Asked Questions (FAQ)
listed: true
slug: frequently-asked-questions--faq-
description: 
index_title: Frequently Asked Questions (FAQ)
hidden: 
keywords: 
tags: 
---

## What is %product%?

%product% is a managed service to collaboratively write, publish, review, analyse and collect feedback on personalised customer-facing docs the modern way. Our documentation portals consist of user guides and API references. You could also call %product% a documentation tool.

## Is %product% a CMS?

Yes, %product% is a content management system (CMS) for documentation.

## What is a documentation?

Documentation is an unlimited amount of pages that are correlated, grouped together and are shown on one index. For example, this support centre which you are currently viewing is only one documentation. See [project structure](/support-center/project-structure) for more information.

## How can my users view my documentation pages?

They can navigate to your own documentation pages through a subdomain that you assign under %product% domain or through a subdomain under your own existing domain. Your docs can also be hosted on a path under your existing domain.

For example, that could be: `pied-piper.developerhub.io` or `docs.your-company.com`, or even `your-company.com/docs`. See the [other hosting options here](/support-center/hosting).

## Can I use my own custom domain?

Yes. See [Using Custom Domain](/support-center/using-custom-domain).

## Can I restrict who can view the documentation?

We provide many ways for making your docs site private, see [all privacy options](/support-center/private-docs),

## Can I restrict access to certain documentation/pages?

Our projects can either be public or private at a time. If you are restricting access internally to your teammates, then they can already access it through the editor. If you want to restrict access for readers who do not have %product% teammate access, then you would need a second project that is [protected/private](/support-center/private-docs).

## Is there support for draft versions?

Each version can be published or unpublished. Unpublished versions are the equivalent of draft versions.

## How do the docs get hosted?

We handle all the hosting. Check out all [hosting options here](/support-center/hosting).

## Is it mobile friendly?

Yes, all the published pages are optimised for mobile viewing. The editor has only been tested for use on desktop or iPad, however.

## Can I change how it looks?

Every bit and piece can be changed. We provide [many built-in options](/support-center/customising-visuals) to make it easy for you to change logos, colours, navigation, font and layout. You can also provide your own [Custom Landing Page](/support-center/custom-landing-page), [auto$](/support-center/custom-css), [auto$](/support-center/custom-javascript) and [auto$](/support-center/custom-footer).

## Would search engines index the pages?

If your project is public, then by default search engines will be able to index all the published pages. You can change this from the [project settings](/support-center/seo#do-not-want-to-be-visible).

## Accented characters are not showing properly, what can I do?

That could happen because of our default font, change the project font to a font that supports your language.

## Do you support DITA or DocBook?

There is no support for XML content models. %product% provides a modern experience with a WYSIWYG editor and advanced features for formatting, linking, data import/export and customisation.

## Do you support Single-Sourcing?

Yes, we support [content reuse](/support-center/synced-blocks) and [templates](/support-center/templates).

## Do you support file uploads/attachments?

We have native support for [images](/support-center/images) uploads. For videos, you may upload a video to YouTube and show it using a [video block](/support-center/videos). Alternatively, you can embed a video from any other service using [custom HTML block](/support-center/custom-html). For other file uploads, you would need to upload the file to a hosting provider (such as your own S3 bucket), and then you may add a link in your documentation page or even create a [nice download button](/support-center/custom-html#fancy-button) for it.

## Can we sync the docs with a GIT repo?

Yes, check [auto$](/support-center/github-sync) which allows you to set up two-way sync between GitHub and %product%.

## Do you support GraphQL docs?

Yes. Check [auto$](/support-center/graphql) where you can embed it in a [auto$](/support-center/custom-html) block or in an entire [landing page](/support-center/landing-page).

## Do you support ChatGPT chat-like experience for search?

Yes, check [auto$](/support-center/ai-search).

## Do you support AsyncAPI references?

Not at the moment. If you'd like to work with us on an implementation, please [contact us](/support-center/contact-us).

## Got Other Questions?

We'd love it if you [contact](/support-center/contact-us) us!